Bug 296383 - KAlarm closed after the login
Summary: KAlarm closed after the login
Status: CLOSED FIXED
Alias: None
Product: kalarm
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: David Jarvie
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-19 19:23 UTC by cesare
Modified: 2020-08-17 23:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cesare 2012-03-19 19:23:55 UTC
Application: kalarm (2.4.10)
KDE Platform Version: 4.4.5 (KDE 4.4.5)
Qt Version: 4.6.2
Operating System: Linux 2.6.33-02063305-generic i686
Distribution: Ubuntu 10.04.4 LTS

-- Information about the crash:
KAlarm automatically closed after the login of Gnome. I don't know because.

The crash can be reproduced some of the time.

 -- Backtrace:
Application: KAlarm (kalarm), signal: Segmentation fault
[KCrash Handler]
#6  0x0816059b in AlarmResources::resourceManager (this=0x83cf210) at ./../../kalarm/resources/alarmresources.h:165
#7  ResourceModel::refresh (this=0x83cf210) at ../../kalarm/resourcemodelview.cpp:217
#8  0x08160845 in ResourceModel (this=0x83cf210, parent=0x0) at ../../kalarm/resourcemodelview.cpp:52
#9  0x08160926 in ResourceModel::instance (parent=0x0) at ../../kalarm/resourcemodelview.cpp:45
#10 0x08163d4e in ResourceSelector (this=0x83c6258, calendar=0x0, parent=0x832e9c0) at ../../kalarm/resourceselector.cpp:85
#11 0x080e295a in MainWindow (this=0x8394848, restored=false, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at ../../kalarm/mainwindow.cpp:164
#12 0x080e3072 in MainWindow::create (restored=false) at ../../kalarm/mainwindow.cpp:127
#13 0x080d62bc in KAlarmApp::newInstance (this=0x8204430) at ../../kalarm/kalarmapp.cpp:435
#14 0xb6c50e30 in KUniqueApplicationAdaptor::newInstance (this=0x8341e08, asn_id=..., args=...) at ../../kdeui/kernel/kuniqueapplication.cpp:454
#15 0xb6c51592 in KUniqueApplicationAdaptor::qt_metacall (this=0x8341e08, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfb794ac) at ./kuniqueapplication_p.moc:81
#16 0xb5d38b34 in QDBusConnectionPrivate::deliverCall (this=0x81fed88, object=0x8341e08, msg=..., metaTypes=..., slotIdx=4) at qdbusintegrator.cpp:904
#17 0xb5d39e45 in QDBusConnectionPrivate::activateCall (this=0x81fed88, object=0x8341e08, flags=337, msg=...) at qdbusintegrator.cpp:816
#18 0xb5d3a880 in QDBusConnectionPrivate::activateObject (this=0x81fed88, node=..., msg=..., pathStartPos=16) at qdbusintegrator.cpp:1364
#19 0xb5d3ab1a in QDBusActivateObjectEvent::placeMetaCall (this=0x83a8a30) at qdbusintegrator.cpp:1477
#20 0xb5c123fe in QObject::event (this=0x8204430, e=0x83a8a30) at kernel/qobject.cpp:1248
#21 0xb5c0150b in QCoreApplication::event (this=0x8204430, e=0x83a8a30) at kernel/qcoreapplication.cpp:1533
#22 0xb6126e46 in QApplication::event (this=0x8204430, e=0x83a8a30) at kernel/qapplication.cpp:2353
#23 0xb61224dc in QApplicationPrivate::notify_helper (this=0x8207d60, receiver=0x8204430, e=0x83a8a30) at kernel/qapplication.cpp:4300
#24 0xb612905e in QApplication::notify (this=0x8204430, receiver=0x8204430, e=0x83a8a30) at kernel/qapplication.cpp:3704
#25 0xb6c4940a in KApplication::notify (this=0x8204430, receiver=0x8204430, event=0x83a8a30) at ../../kdeui/kernel/kapplication.cpp:302
#26 0xb5c01a3b in QCoreApplication::notifyInternal (this=0x8204430, receiver=0x8204430, event=0x83a8a30) at kernel/qcoreapplication.cpp:704
#27 0xb5c04473 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x81e42e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#28 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x81e42e0) at kernel/qcoreapplication.cpp:1345
#29 0xb5c045dd in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1238
#30 0xb5c2dadf in QCoreApplication::sendPostedEvents (s=0x820bca0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#31 postEventSourceDispatch (s=0x820bca0) at kernel/qeventdispatcher_glib.cpp:276
#32 0xb46915e5 in g_main_dispatch (context=0x820acd8) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:1960
#33 IA__g_main_context_dispatch (context=0x820acd8) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2513
#34 0xb46952d8 in g_main_context_iterate (context=0x820acd8, block=<value optimized out>, dispatch=1, self=0x8206628) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2591
#35 0xb46954b8 in IA__g_main_context_iteration (context=0x820acd8, may_block=1) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2654
#36 0xb5c2d5d5 in QEventDispatcherGlib::processEvents (this=0x81e44c0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#37 0xb61e2135 in QGuiEventDispatcherGlib::processEvents (this=0x81e44c0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0xb5c00059 in QEventLoop::processEvents (this=0xbfb79eb4, flags=) at kernel/qeventloop.cpp:149
#39 0xb5c004aa in QEventLoop::exec (this=0xbfb79eb4, flags=...) at kernel/qeventloop.cpp:201
#40 0xb5c0469f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#41 0xb6122577 in QApplication::exec () at kernel/qapplication.cpp:3579
#42 0x0809a5c5 in main (argc=3, argv=0xbfb7a384) at ../../kalarm/main.cpp:127

Reported using DrKonqi
Comment 1 David Jarvie 2012-03-19 21:43:05 UTC
If you start KAlarm again after it crashes,  without logging out, does it crash again sometimes?

If so, after it crashes, can you please open a terminal window, and then start KAlarm from there, by typing "kalarm" followed by ENTER in the terminal window. If it crashes again, please copy the output from the terminal window to this bug report.
Comment 2 David Jarvie 2012-03-26 12:31:41 UTC
Information supplied by the reporter, by email, 19/3/2012:

KAlarm after the restart, manually, don't crashes again, it crashes, and not at all times, only after the first start, at login.
Comment 3 David Jarvie 2012-03-28 21:14:02 UTC
Do you see any error message windows appearing briefly, before KAlarm crashes?
Comment 4 David Jarvie 2012-03-28 23:13:14 UTC
Git commit 4a3204b75464406ab3b3505e2fe222937aac6750 by David Jarvie.
Committed on 29/03/2012 at 01:07.
Pushed by djarvie into branch 'master'.

Bug 296383: during startup, check that resources calendar opens ok

[KResources build option]: Prevent crash in program initialisation by
checking that the resources calendar has opened successfully.

M  +17   -2    kalarm/alarmcalendar.cpp
M  +1    -1    kalarm/alarmcalendar.h
M  +2    -1    kalarm/kalarmapp.cpp

http://commits.kde.org/kdepim/4a3204b75464406ab3b3505e2fe222937aac6750
Comment 5 David Jarvie 2012-03-28 23:26:07 UTC
Git commit 77e96906cd3d520fc32fb710ac73b7a7cee2df12 by David Jarvie.
Committed on 29/03/2012 at 01:27.
Pushed by djarvie into branch 'KDE/4.8'.

Bug 296383: during startup, check that resources calendar opens ok

[KResources build option]: Prevent crash in program initialisation by
checking that the resources calendar has opened successfully.

Backport of 4a3204b75464406ab3b3505e2fe222937aac6750 (master)

M  +2    -1    kalarm/Changelog
M  +17   -2    kalarm/alarmcalendar.cpp
M  +1    -1    kalarm/alarmcalendar.h
M  +2    -1    kalarm/kalarmapp.cpp

http://commits.kde.org/kdepim/77e96906cd3d520fc32fb710ac73b7a7cee2df12
Comment 6 David Jarvie 2012-03-28 23:28:32 UTC
Git commit f73e082654a88617439043454b45bf950d168dfc by David Jarvie.
Committed on 29/03/2012 at 01:29.
Pushed by djarvie into branch 'KDE/4.4'.

Bug 296383: during startup, check that resources calendar opens ok

Prevent crash in program initialisation by checking that the
resources calendar has opened successfully.

Backport of 4a3204b75464406ab3b3505e2fe222937aac6750 (master)

M  +2    -1    kalarm/Changelog
M  +16   -3    kalarm/alarmcalendar.cpp
M  +2    -2    kalarm/alarmcalendar.h
M  +2    -1    kalarm/kalarmapp.cpp

http://commits.kde.org/kdepim/f73e082654a88617439043454b45bf950d168dfc
Comment 7 David Jarvie 2012-03-28 23:38:14 UTC
I've committed a fix, which I hope will prevent the crash if the error I suspect is triggering the crash occurs. There is still a possibility that KAlarm could terminate cleanly instead of crashing - if you see the same problem after updating to a new version of KAlarm, please reopen the bug.

The fix will be in KDE 4.8.2. It will also be in KDE/kdepim 4.4.12, if that is ever released (which is unlikely).