Bug 296383: during startup, check that resources calendar opens ok

[KResources build option]: Prevent crash in program initialisation by
checking that the resources calendar has opened successfully.

BUG:296383